# WebSpec

./: .gitignore  FormalGrammar.md  OperatorsManual.md  README.md  mega_source.html  my_test.ws  parser.out  parsetab.py  pyproject.toml  recorded_shopping.ws  webspec_ast.py  webspec_capture.js  webspec_cli.py  webspec_lexer.py  webspec_parser.py  webspec_recorder.py  webspec_repl.py  webspec_report.py  webspec_resolver.py  webspec_runtime.py  webspec_transpiler.py
reports/: report_20260321_141124.html  report_20260321_141134.html  report_20260321_142124.html  report_20260321_142650.html  report_20260321_153643.html
tests/: conftest.py  test_capture.js  test_cli.py  test_cli_edge_cases.py  test_integration.py  test_lexer.py  test_mega.py  test_new_features.py  test_parser.py  test_parser_edge_cases.py  test_recorder.py  test_repl.py  test_report.py  test_resolver.py  test_resolver_edge_cases.py  test_runtime.py  test_runtime_edge_cases.py  test_transpiler.py  test_transpiler_edge_cases.py
tests/fixtures/: iframe_and_alerts.ws  login_test.ws  mega_test.html  mega_test.ws  search_and_filter.ws  test  test_counter.ws  test_data_table.ws  test_full_flow.ws  test_login.ws  test_search.ws  test_site.html  test_table.ws
tests/weather_shopper/: 01_home.ws  02_products.ws  03_cart_flow.ws  04_smart_buy.ws  05_stress.ws  06_data_driven.ws  products.csv  test
webspec-vscode/: README.md  language-configuration.json  package.json
webspec-vscode/snippets/: webspec.json
webspec-vscode/syntaxes/: webspec.tmLanguage.json
webspec-vscode/themes/: webspec-color-theme-light.json  (+1 more)
