[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "webspec"
version = "0.1.0"
description = "English-like browser testing DSL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.10,<5",
    "beautifulsoup4>=4.12",
    "ply>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
webspec = "webspec_cli:main"
webspec-repl = "webspec_repl:main"
webspec-record = "webspec_recorder:main"

[tool.setuptools]
py-modules = [
    "webspec_lexer",
    "webspec_parser",
    "webspec_ast",
    "webspec_runtime",
    "webspec_resolver",
    "webspec_transpiler",
    "webspec_cli",
    "webspec_repl",
    "webspec_recorder",
    "webspec_report",
]